# ChessAI-NEA

./: GUI.py  backup.py  live.py  main.py  pyproject.toml
